<resources>
    <string name="app_name">Lesson2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="notifications">Notifications</string>
    <string name="user1_name">Roman Kamushken</string>
    <string name="user1_date">2 days ago</string>
    <string name="user1_text">Check out awesome updates for Android design kit for Figma. Now more screens and more categories.</string>
    <string name="replays">117 REPLAYS</string>

    <string name="user2_name">Tina Turbina</string>
    <string name="user2_date">18 minutes ago</string>
    <string name="user2_text">“into component container and with resizing constraints set????”</string>

    <string name="user3_name">Tomek Kuwalskij</string>
</resources>