<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="720dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fab_height"
        android:padding="@dimen/my_margin"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:theme="@style/Theme.Lesson2.AppBarOverlay">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/arrow"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatImageView>
            <TextView
                android:layout_width="216dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/notifications"
                android:textColor="@color/black"
                android:textSize="@dimen/title_size"
                tools:ignore="MissingConstraints"
                android:layout_marginLeft="@dimen/top_margin"
                android:layout_marginRight="@dimen/top_margin"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/search"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatImageView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:orientation="vertical"
        android:padding="@dimen/my_margin">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user1"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/fab_margin"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            android:paddingTop="@dimen/top_padding_card"
            android:layout_marginTop="@dimen/fab_margin">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/userpic1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/Userpic1"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatImageView>
            <TextView
                android:id="@+id/user1_name"
                android:layout_width="@dimen/fab_width"
                android:layout_height="wrap_content"
                android:text="@string/user1_name"
                android:textColor="@color/black"
                android:textSize="@dimen/name_size"
                app:layout_constraintStart_toEndOf="@id/userpic1"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                android:layout_marginLeft="@dimen/fab_margin"/>
            <TextView
                android:id="@+id/user1_date"
                android:layout_width="@dimen/fab_width"
                android:layout_height="wrap_content"
                android:text="@string/user1_date"
                android:textColor="@color/black"
                android:textSize="@dimen/date_size"
                app:layout_constraintStart_toEndOf="@id/userpic1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user1_name"
                tools:ignore="MissingConstraints"
                android:layout_marginLeft="@dimen/fab_margin"
                android:alpha="0.4"/>
            <TextView
                android:id="@+id/user1_text"
                android:layout_width="@dimen/fab_width"
                android:layout_height="wrap_content"
                android:text="@string/user1_text"
                android:textColor="@color/black"
                android:textSize="@dimen/name_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginRight="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/user1_date" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/replays"
                android:textColor="@color/replays"
                android:textSize="@dimen/replays_size"
                android:layout_marginTop="@dimen/my_margin"
                android:layout_marginRight="@dimen/fab_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user1_text"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/klass"
                app:layout_constraintTop_toBottomOf="@id/user1_text"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="@dimen/klass_margin">
            </androidx.appcompat.widget.AppCompatImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@color/gray"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingTop="@dimen/top_padding_card"
            android:paddingBottom="@dimen/fab_margin">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/userpic2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/Userpic2"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatImageView>
            <TextView
                android:id="@+id/user2_name"
                android:layout_width="@dimen/fab_width"
                android:layout_height="wrap_content"
                android:text="@string/user2_name"
                android:textColor="@color/black"
                android:textSize="@dimen/name_size"
                app:layout_constraintStart_toEndOf="@id/userpic2"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                android:layout_marginLeft="@dimen/fab_margin"/>
            <TextView
                android:id="@+id/user2_date"
                android:layout_width="@dimen/fab_width"
                android:layout_height="wrap_content"
                android:text="@string/user2_date"
                android:textColor="@color/black"
                android:textSize="@dimen/date_size"
                app:layout_constraintStart_toEndOf="@id/userpic2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user2_name"
                tools:ignore="MissingConstraints"
                android:layout_marginLeft="@dimen/fab_margin"
                android:alpha="0.4"/>
            <TextView
                android:id="@+id/user2_text"
                android:layout_width="@dimen/fab_width"
                android:layout_height="wrap_content"
                android:text="@string/user2_text"
                android:textColor="@color/black"
                android:textSize="@dimen/name_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginRight="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/user2_date" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/replays"
                android:textColor="@color/replays"
                android:textSize="@dimen/replays_size"
                android:layout_marginTop="@dimen/my_margin"
                android:layout_marginRight="@dimen/fab_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user2_text"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/klass"
                app:layout_constraintTop_toBottomOf="@id/user2_text"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="@dimen/klass_margin">
            </androidx.appcompat.widget.AppCompatImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin"
            android:paddingTop="@dimen/top_padding_card">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/userpic3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/Userpic3"
                tools:ignore="MissingConstraints">
            </androidx.appcompat.widget.AppCompatImageView>
            <TextView
                android:id="@+id/user3_name"
                android:layout_width="@dimen/fab_width"
                android:layout_height="wrap_content"
                android:text="@string/user3_name"
                android:textColor="@color/black"
                android:textSize="@dimen/name_size"
                app:layout_constraintStart_toEndOf="@id/userpic3"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints"
                android:layout_marginLeft="@dimen/fab_margin"/>
            <TextView
                android:id="@+id/user3_date"
                android:layout_width="@dimen/fab_width"
                android:layout_height="wrap_content"
                android:text="@string/user1_date"
                android:textColor="@color/black"
                android:textSize="@dimen/date_size"
                app:layout_constraintStart_toEndOf="@id/userpic3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user3_name"
                tools:ignore="MissingConstraints"
                android:layout_marginLeft="@dimen/fab_margin"
                android:alpha="0.4"/>
            <TextView
                android:id="@+id/user3_text"
                android:layout_width="@dimen/fab_width"
                android:layout_height="wrap_content"
                android:text="@string/user2_text"
                android:textColor="@color/black"
                android:textSize="@dimen/name_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginRight="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/user3_date" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/replays"
                android:textColor="@color/replays"
                android:textSize="@dimen/replays_size"
                android:layout_marginTop="@dimen/my_margin"
                android:layout_marginRight="@dimen/fab_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user3_text"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/klass"
                app:layout_constraintTop_toBottomOf="@id/user3_text"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="@dimen/klass_margin"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fab_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:theme="@style/Theme.Lesson2.AppBarOverlay">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/shop"
            android:layout_marginTop="@dimen/bottom_margin">
        </androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/book"
            android:layout_marginTop="@dimen/bottom_margin">
        </androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/basket"
            android:layout_marginTop="@dimen/bottom_margin">
        </androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/favorites"
            android:layout_marginTop="@dimen/bottom_margin">
        </androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/account">
        </androidx.appcompat.widget.AppCompatImageView>
    </LinearLayout>
</RelativeLayout>